--- a/index.html
+++ b/index.html
@@ -1,135 +1,151 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-
-Name       : Coefficient 
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20131117
-
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
-<!--[if IE 6]>
-<link href="default_ie6.css" rel="stylesheet" type="text/css" />
-<![endif]-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coefficient</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
-<div id="wrapper">
-	<div id="header-wrapper">
-		<div id="header" class="container">
-			<div id="logo">
-				<h1><a href="#">Coefficient</a></h1>
-				<p>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></p>
-			</div>
-			<div id="social">
-				<ul class="contact">
-					<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-					<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-					<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-					<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-				</ul>
-			</div>
-		</div>
-		<div id="menu" class="container">
-			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="1" title="">Services</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
-			</ul>
-		</div>
-	</div>
+    <div id="header-wrapper">
+        <header id="header" class="container">
+            <div id="header-content">
+                <div id="logo">
+                    <a href="#">
+                        <h1>Coefficient</h1>
+                    </a>
+                </div>
+                <div id="social">
+                    <ul class="contact">
+                        <li><a href="#" class="icon icon-twitter"><span></span></a></li>
+                        <li><a href="#" class="icon icon-facebook"><span></span></a></li>
+                        <li><a href="#" class="icon icon-dribbble"><span></span></a></li>
+                        <li><a href="#" class="icon icon-tumblr"><span></span></a></li>
+                        <li><a href="#" class="icon icon-rss"><span></span></a></li>
+                    </ul>
+                </div>
+			</header> 
+            </div>
+        
+        <nav id="menu" class="container">
+            <ul>
+                <li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
+                <li><a href="#" accesskey="2" title="">Services</a></li>
+                <li><a href="#" accesskey="3" title="">Our Clients</a></li>
+                <li><a href="#" accesskey="4" title="">About Us</a></li>
+                <li><a href="#" accesskey="5" title="">Careers</a></li>
+                <li><a href="#" accesskey="6" title="">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
 
+    <div class="angry-grid container">
+        <div id="item-0">
+            <div class="title">
+                <h2>Maecenas luctus</h2>
+            </div>
+            <p>This is <strong>Coefficient</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license.</p>
+        </div>
+        <div id="item-1">
+            <div class="title">
+                <h2>Item 1</h2>
+            </div>
+            <p>Описание элемента 1. Здесь можно добавить текст.</p>
+        </div>
+        <div id="item-2">
+            <div class="title">
+                <h2>Item 2</h2>
+            </div>
+            <p>Описание элемента 2. Здесь можно добавить текст.</p>
+        </div>
+        <div id="item-3">
+            <div class="title">
+                <h2>Item 3</h2>
+            </div>
+            <p>Описание элемента 3. Здесь можно добавить текст.</p>
+        </div>
+    </div>
 
+    <div id="page" class="container">
+        <div class="columns">
+            <div class="column">
+                <div class="title">
+                    <h2>Maecenas luctus</h2>
+                </div>
+                <p>This is <strong>Coefficient</strong>, a free, fully standards-compliant CSS template. The photos in this template are from Fotogrph.
+                     This free template is released under the Creative Commons Attribution license, 
+                     so you're pretty much free to do whatever you want with it (even use it commercially)
+                      provided you give us credit for it. Have fun :)</p>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h2>Fusce ultrices</h2>
+                </div>
+                <img class="column img" src="images/pic01.jpg" alt="" />
+                <p>Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus.</p>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h2>Mauris vulputate</h2>
+                </div>
+                <img class="column img" src="images/pic02.jpg" alt="" />
+                <p>Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem.</p>
+            </div>
+            <div class="column">
+                <div class="title">
+                    <h2>Praesent scelerisque</h2>
+                </div>
+                <img class="column img" src="images/pic03.jpg" alt="" />
+                <p>Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
+            </div>
+        </div>
+    </div>
 
-<div class="angry-grid">
-  <div id="item-0"><div class="title">
-				<h2>Maecenas luctus</h2>
-			</div>
-			<p>This is <strong>Coefficient</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p></div>
-  <div id="item-1">&nbsp;</div>
-  <div id="item-2">&nbsp;</div>
-  <div id="item-3">&nbsp;</div>
-</div>
+    <div id="portfolio-wrapper" class="container">
+        <div id="portfolio">
+            <div class="title">
+                <h2>Aenean elementum</h2>
+                <span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+            </div>
+            <div class="columns">
+                <div class="column">
+                    <div class="box">
+                        <h3>Vestibulum venenatis</h3>
+                        <p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
+                        <a href="#" class="button">Etiam posuere</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box">
+                        <h3>Praesent scelerisque</h3>
+                        <p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+                        <a href="#" class="button">Etiam posuere</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box">
+                        <h3>Donec dictum metus</h3>
+                        <p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+                        <a href="#" class="button">Etiam posuere</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box">
+                        <h3>Mauris vulputate dolor</h3>
+                        <p>Rutrum fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+                        <a href="#" class="button">Etiam posuere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	
-	<div id="page" class="container">
-
-		<div class="column1">
-			<div class="title">
-				<h2>Maecenas luctus</h2>
-			</div>
-			<p>This is <strong>Coefficient</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-		</div>
-		<div class="column2">
-			<div class="title">
-				<h2>Fusce ultrices</h2>
-			</div>
-			<img src="images/pic01.jpg" width="282" height="150" alt="" />
-			<p>Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus.</p>
-		</div>
-		<div class="column3">
-			<div class="title">
-				<h2>Mauris vulputate</h2>
-			</div>
-			<img src="images/pic02.jpg" width="282" height="150" alt="" />
-			<p>Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem.</p>
-		</div>
-		<div class="column4">
-			<div class="title">
-				<h2>Praesent scelerisque</h2>
-			</div>
-			<img src="images/pic03.jpg" width="282" height="150" alt="" />
-			<p>Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris.</p>
-		</div>
-	</div>
-	<div id="portfolio-wrapper">
-		<div id="portfolio" class="container">
-			<div class="title">
-				<h2>Aenean elementum</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
-			<div class="column1">
-				<div class="box">
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<a href="#" class="button">Etiam posuere</a> </div>
-			</div>
-			<div class="column2">
-				<div class="box">
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button">Etiam posuere</a> </div>
-			</div>
-			<div class="column3">
-				<div class="box">
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button">Etiam posuere</a> </div>
-			</div>
-			<div class="column4">
-				<div class="box">
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button">Etiam posuere</a> </div>
-			</div>
-		</div>
-	</div>
-</div>
-<div id="footer">
-	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
-</div>
+    <footer id="footer" class="container">
+        <p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
+    </footer>
 </body>
 </html>
